--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,9 @@
-main{
+#job{
     height: 150px;
     width: 150px;
     background-color: black;
 }
-p{
+.hello-accio-job{
     color: white;
     margin-left: 32px;
     padding: 10px;
